--- a/views/allbooking.ejs
+++ b/views/allbooking.ejs
@@ -2,20 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIET Cultutal Programme</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <title>Appointments</title>
     <link rel="icon" type="image/x-icon" href="media/fav_logo.ico">
     <script src="https://kit.fontawesome.com/820f450a7b.js" crossorigin="anonymous"></script>
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <!--Stylesheet-->
-    <!-- <link rel="stylesheet" href="certificate.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" />
     
@@ -51,11 +49,6 @@ body{
     align-items: center;
     font-family: "Poppins",sans-serif;
 }
-.dice-wrapper{
-    width: 90%;
-    display: flex;
-    justify-content: space-around;
-}
 p{
     font-size: 16px;
     margin: 30px 0;
@@ -71,9 +64,6 @@ button{
     letter-spacing: 1px;
     border-radius: 5px;
     cursor: pointer;
-}
-.input-field{
-    margin-top: 40px;
 }
 .heading{
     margin-top: 10px;
@@ -96,29 +86,6 @@ h3 {
   }
 
 
-/* .flex{
-    display: flex;
-    
-}
-.options-dept{
-    margin-right: 5px;
-}
-.options-sem{
-    margin-left: 5px;
-} */
-
-
-
-/* delete this if enable flex in options */
-.options-dept{
-    margin-bottom: 7px;
-}
-.options-sem{
-    margin-top: 7px;
-}
-/* delete this if enable flex in options */
-
-
 
 
     </style>
@@ -127,9 +94,6 @@ h3 {
 <body>
     
     <div class="container">
-        <!-- <div class="dice-wrapper">
-            <img id="die-img" src="media/logo.png" height="120px">
-        </div> -->
         <h3 class="heading">My Booked Appointmemt</h3>
         <table class="table" style="margin-top: 40px; text-align: center;">
             <thead class="table-dark">
@@ -162,20 +126,10 @@ h3 {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-        <!--API code-->
-    <script>
-
-
-
-
-
-
-    </script>
-    <!--------------------->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  
-  <script src="https://kit.fontawesome.com/820f450a7b.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    
+    <script src="https://kit.fontawesome.com/820f450a7b.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
