--- a/views/mybooking.ejs
+++ b/views/mybooking.ejs
@@ -66,7 +66,7 @@ button{
     cursor: pointer;
 }
 .heading{
-    margin-top: 10px;
+    margin-top: 0px;
 }
 h3 {
     padding: 30px 0 8px;
@@ -120,6 +120,7 @@ h3 {
               </tbody>
             
           </table>
+          <a href="/" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; margin-top: 50px; margin-left: 0px;">Home</a>
         
     </div>
     <!--Script-->
