--- a/views/success.ejs
+++ b/views/success.ejs
@@ -101,7 +101,7 @@ h3 {
                 <div class="card-body" style="margin-left: 20px;"">
                   <h5 class="card-title" style="text-align: center;"><%=result.name%> you Booked an Appointment</h5>
                   
-                  <a href="main" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; margin-top: 50px; margin-left: 160px;">View Details</a>
+                  <a href="/" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; margin-top: 50px; margin-left: 160px;">View Details</a>
                 </div>
               </div>
             </div>
