--- a/views/allbooking.ejs
+++ b/views/allbooking.ejs
@@ -110,7 +110,7 @@ h3 {
                     <% for (let i = 0; i < results.length; i++) { %>
                         <tr>
                             <td><%= results[i].name %></td>
-                            <td><%= results[i].ph %></td>
+                            <td><%= results[i].phNumber %></td>
                             <td><%= results[i].email %></td>
                             <td><%= results[i].doctor %></td>
                             <td><%= results[i].date %></td>
